--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -1,6 +1,4 @@
-@import "tailwindcss/base";
-@import "tailwindcss/components";
-@import "tailwindcss/utilities";
+@import "tailwindcss";
 
 @source "../../app/Filament/**/*.php";
 @source "../../resources/views/**/*.blade.php";
